--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
+# игнорировать файл с переменными окружения
+.env
+
+# стандартные исключения
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# настройки IDE (если используешь VSCode, PyCharm и др.)
+.vscode/
+.idea/
+*.swp
+
 config.py
